Authorization checks working

--- a/doc/how-this-project-was-created.ipynb
+++ b/doc/how-this-project-was-created.ipynb
@@ -69,6 +69,9 @@
    "source": [
     "go get github.com/Nerzal/gocloak/v13\n",
     "go get github.com/gorilla/mux\n",
+    "go get github.com/prometheus-community/prom-label-proxy\n",
+    "go get github.com/prometheus/prometheus\n",
+    "go get github.com/go-openapi/runtime\n",
     "echo DONE"
    ]
   },
