Adding kustomize resources for deploying to microshift
For testing the deployment of Keycloak on OpenShift Local with the
microshift preset for development and testing.

--- a/doc/how-this-project-was-created.ipynb
+++ b/doc/how-this-project-was-created.ipynb
@@ -69,9 +69,13 @@
    "source": [
     "go get github.com/Nerzal/gocloak/v13\n",
     "go get github.com/gorilla/mux\n",
-    "go get github.com/prometheus-community/prom-label-proxy\n",
-    "go get github.com/prometheus/prometheus\n",
+    "go get github.com/prometheus-community/prom-label-proxy@v0.8.0\n",
+    "go get github.com/prometheus/prometheus@v0.48.1\n",
     "go get github.com/go-openapi/runtime\n",
+    "go get github.com/spf13/cobra\n",
+    "go get github.com/rs/zerolog\n",
+    "go get github.com/jzelinskie/cobrautil\n",
+    "go get github.com/rs/cors\n",
     "echo DONE"
    ]
   },
