--- a/doc/test-api.ipynb
+++ b/doc/test-api.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "AUTH_CLIENT_ID=ai4cloudops\n",
-    "AUTH_CLIENT_SECRET=3mWX0D3dk1Lq5Yl9FjaMJBN5awWT8GR2\n",
+    "AUTH_CLIENT_SECRET=Z7D5w7XTz0Ip5uLhbAmFJa6Opi6UbOlR\n",
     "AUTH_BASE_URL=https://keycloak.apps-crc.testing\n",
     "AUTH_REALM=NERC\n",
     "\n",
@@ -33,6 +33,7 @@
     "  -d \"grant_type=client_credentials\" \\\n",
     "  \"$AUTH_BASE_URL/realms/$AUTH_REALM/protocol/openid-connect/token\" \\\n",
     "  | jq -r \".access_token\")\n",
+    "echo $AUTH_TOKEN\n",
     "echo DONE\n"
    ]
   },
@@ -53,7 +54,8 @@
    },
    "outputs": [],
    "source": [
-    "curl -i \"http://localhost:8081/api/v1/query\" \\\n",
+    "curl -i 'http://localhost:8080/api/v1/query' --get \\\n",
+    "  --data-urlencode 'query=cluster:cpu_cores:sum{cluster=\"nerc-ocp-prod\"}' \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -H \"Authorization: Bearer $AUTH_TOKEN\""
    ]
