--- a/doc/test-api.ipynb
+++ b/doc/test-api.ipynb
@@ -24,14 +24,14 @@
    },
    "outputs": [],
    "source": [
-    "AUTH_CLIENT_ID=ai4cloudops\n",
-    "AUTH_CLIENT_SECRET=4EWeBbNyFUmtVjnRZY9LQZeZ4XwIVHKk\n",
-    "AUTH_BASE_URL=https://keycloak.apps-crc.testing\n",
-    "AUTH_REALM=NERC\n",
+    "PROXY_AUTH_BASE_URL=https://keycloak.apps-crc.testing\n",
+    "PROXY_AUTH_REALM=NERC\n",
+    "USER_AUTH_CLIENT_ID=ai4cloudops\n",
+    "USER_AUTH_CLIENT_SECRET=Find the client secret for your USER_AUTH_CLIENT_ID above\n",
     "\n",
-    "AUTH_TOKEN=$(curl -X POST -k -s -u \"$AUTH_CLIENT_ID:$AUTH_CLIENT_SECRET\" \\\n",
+    "AUTH_TOKEN=$(curl -X POST -k -s -u \"$USER_AUTH_CLIENT_ID:$USER_AUTH_CLIENT_SECRET\" \\\n",
     "  -d \"grant_type=client_credentials\" \\\n",
-    "  \"$AUTH_BASE_URL/realms/$AUTH_REALM/protocol/openid-connect/token\" \\\n",
+    "  \"$PROXY_AUTH_BASE_URL/realms/$PROXY_AUTH_REALM/protocol/openid-connect/token\" \\\n",
     "  | jq -r \".access_token\")\n",
     "echo $AUTH_TOKEN\n",
     "echo DONE\n"
@@ -55,21 +55,10 @@
    "outputs": [],
    "source": [
     "curl -i 'http://localhost:8080/api/v1/query' --get \\\n",
-    "  --data-urlencode 'query=cluster:cpu_cores:sum{cluster=\"nerc-ocp-prod\"}' \\\n",
+    "  --data-urlencode 'query=cluster:cpu_cores:sum{cluster=\"nerc-ocp-infra\"}' \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -H \"Authorization: Bearer $AUTH_TOKEN\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
