--- a/doc/test-api.ipynb
+++ b/doc/test-api.ipynb
@@ -55,10 +55,21 @@
    "outputs": [],
    "source": [
     "curl -i 'http://localhost:8080/api/v1/query' --get \\\n",
-    "  --data-urlencode 'query=cluster:cpu_cores:sum{cluster=\"nerc-ocp-infra\"}' \\\n",
+    "  --data-urlencode 'query=cluster:cpu_cores:sum{cluster=\"nerc-ocp-prod\"}' \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -H \"Authorization: Bearer $AUTH_TOKEN\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
